--- a/RickyMortySLN/RickyMorty/RickyMorty/Views/Detail.xaml
+++ b/RickyMortySLN/RickyMorty/RickyMorty/Views/Detail.xaml
@@ -11,7 +11,7 @@
     </ContentPage.Resources>
     <ContentPage.Content>
         <StackLayout Orientation="Vertical">
-            <Label Text="Loading" IsVisible="{Binding IsBusy}"/>
+            <Label Text="Loading" IsVisible="{Binding IsBusy}" Margin="100, 50, 0, 0"/>
             
             <Label Text="{Binding Location, Converter={StaticResource LocationToDimensionConverter}}" IsVisible="{Binding IsBusy, Converter={StaticResource negateBoolean}}" FontAttributes="Bold" Margin="100, 50, 0, 20"/>
 
